Release Notes

* 9/20/2016
  * checking sutck merging jobs

* 9/16/2016
  * setting DEL flag to event ranges

* 9/15/2016
  * added tier to SiteSpec

* 9/12/2016
  * added multi zip support for ES

* 9/7/2016
  * using soft erase for dis and sub
  * adding all production sites to WORLD by default

* 8/29/2016
  * added accesptJson to get/update event ranges

* 7/28/2016
  * using w instead of d to get OS info

* 7/25/2016
  * tagging of shares
  * removed obsoleted memcached code

* 7/14/2016
  * using bulk fetch for files in storeJobs

* 7/12/2016
  * registering and deleting ES files in rucio

* 7/8/2016
  * added jumbo job stuff

* 7/1/2016
  * changed Savanna to JIRA in notifications
  * fixed killUnfinishedJobs

* 6/28/2016
  * added a protection to DyPD2P for large user datasets

* 6/23/2016
  * added avalancheTask
  * fixed Watcher to correctly change jobParams for pmerge

* 6/21/2016
  * fixed datasetMgr to delete dis for panda.um

* 6/20/2016
  * more informative message for closed clones

* 6/13/2016
  * added keepUnmerged to killJob
  * removed datatype check from EP

* 6/7/2016
  * changed to sort files for ES since file order is important for positional event number

* 6/6/2016
  * resetting batchID for retry

* 6/2/2016
  * removed scope from tmpin

* 5/31/2016
  * fixed event range generation with multiple inputs

* 5/20/2016
  * added a protection against unique constraint ATLAS_RUCIO.DIDS_GUID_IDX violation
  * added a protection against too long scope
  * setting panda_id and campaign to file metadata

* 5/25/2016
  * imporved getJediTaskDetails
  * added writeInputToFile
  * fixed Watcher for time-outed ES merge not to update ES jobs

* 5/9/2016
  * reduced memory consumtion and removed redundant file lookups in SetupperAtlas

* 5/4/2016
  * changed to copy ES merge trf to job.transformation
  * changed ES jobs to go from merging to failed when associated ES jobs go to failed

* 5/3/2016
  * using merging for ES jobs while ES merge is running
